--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -12,8 +12,10 @@
   height: 100%;
 }
 
-#map {
+.map {
   height: 100%;
+  padding: 0;
+  flex:80%;
 }
 
 h2 {
@@ -28,8 +30,13 @@ h2 {
  
 }
 
+.row {
+  display: flex;
+}
+
 #results {
     text-align: left;
+    flex: 20%;
     padding-top: 20px;
     overflow-y: scroll;
     height: 600px;
@@ -39,6 +46,12 @@ h2 {
 
 .result {
     padding-bottom: 5px;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 .error {
