--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a (click)="this.goHome()" class="navbar-brand" href="javascript:;">Find Place For</a>
+      <a (click)="this.goHome()" class="navbar-brand" href="javascript:;">SafeMeet</a>
     </div>
 
     <div class="collapse navbar-collapse">
