--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~leaflet/dist/leaflet.css";
+
 body {
-    background-image: url("assets/img/bck.jpg");
+    //background-image: url("assets/img/bck.jpg");
     background-size: 100%;
 }
 
